appId: com.mmustafa_kapici.dosemate
---
- launchApp
- assertVisible: "Hoşgeldiniz"
- assertVisible: "İlaçlar"
- tapOn: "İlaçlar"
- assertVisible: "Ekle" 